[package]
name = "lightyear-Menu-Example"
version = "0.1.0"
edition = "2021"



# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.2"
serde = "*"
rand = "*"
tracing = "*"
lightyear = {git = "https://github.com/SueHeir/lightyear.git",features = ["steam", "leafwing", "avian2d", "visualizer"] } #cBournhonesque
crossbeam-channel = { version = "0.5.13", features = [] }

steamworks = "0.11"
parking_lot = "*"
avian2d = {version = "0.2", features = [  "2d","f32","parry-f32","parallel","serialize"]}
leafwing-input-manager = "0.16"
bevy-inspector-egui = "0.29.1"
bevy_simple_text_input = "0.10"

