[package]
name = "lightyear-Menu-Example"
version = "0.1.0"
edition = "2021"



# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.16"
serde = "*"
rand = "*"
tracing = "*"
lightyear = {version = "0.21.0" ,features = ["udp", "crossbeam", "netcode", "leafwing", "avian2d", "crossbeam"] } #cBournhonesque  , "visualizer" "steam",
crossbeam-channel = { version = "0.5.13", features = [] }
clap = { version = "4.5.4", features = ["derive"] }
steamworks = "0.12"
parking_lot = "*"
avian2d = {version = "0.3", features = [  "2d","f32","parry-f32","parallel","serialize"]}
leafwing-input-manager = "0.17"
bevy-inspector-egui = "0.31"
bevy_simple_text_input = "0.11"

