[package]
name = "lightyear-Menu-Example"
version = "0.1.0"
edition = "2021"



# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.16"}
serde = "*"
rand = "*"
tracing = "*"
tracing-appender = "*"
lightyear = {git = "https://github.com/cBournhonesque/lightyear.git" ,features = [
    "udp", 
    "crossbeam", 
    "netcode", 
    "leafwing", 
    "avian2d", 
    "steam", 
    "interpolation", 
    "prediction", 
    "replication"
] }
steamworks = "0.11"
crossbeam-channel = { version = "0.5.13", features = [] }
clap = { version = "4.5.4", features = ["derive"] }
parking_lot = "*"
avian2d = {version = "0.3", features = [  "2d","f32","parry-f32","parallel","serialize"]}
leafwing-input-manager = "0.17"
bevy-inspector-egui = "0.31"
bevy_simple_text_input = "0.11"
lightyear_core = "0.21.1"
sync-cell = "0.2.0"
lightyear_frame_interpolation = "0.22.5"

